<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day :</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">About us</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is football widget</string>
    <string name="api_key" translatable="false">API_KEY</string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="games_of_day">Today\' Match</string>
    <string name="home">Home Team</string>
    <string name="away">Away Team</string>
    <string name="game_score">Match Score</string>
    <string name="about_app">About Football App</string>
    <string name="league_name">League Name</string>
    <string name="matchday">Match day</string>
    <string name="football_score_list">Football Score List</string>
    <string name="home_team_icon">Home Team Icon</string>
    <string name="away_team_icon">Away Team Icon</string>
    <string name="not_known_league">Not known League Please report</string>
    <string name="no_match_available">No Match available today!</string>
    <string name="arsenal">Arsenal London FC</string>
    <string name="manutd">Manchester United FC</string>
    <string name="arsenal">Swansea City</string>
    <string name="arsenal">Arsenal London FC</string>
    <string name="arsenal">Arsenal London FC</string>

    <string name="arsenal">Arsenal London FC</string>



</resources>
