<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/widget_margin"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:contentDescription="@string/widget_text"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#000"
            android:gravity="center"
            android:contentDescription="@string/games_of_day"
            android:text="@string/games_of_day"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="teams"
            android:orientation="horizontal"
            android:padding="15sp">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/home"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="2"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/away"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="2"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/game_score"
            android:textColor="@color/blue01"
            android:textSize="15sp" />

    </LinearLayout>

</FrameLayout>